# image-processing

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  vcpkg.json
cmake/: NoInSourceBuilds.cmake
src/: CMakeLists.txt  camera.hpp  commands.hpp  cube.hpp  file_closer.hpp  image.hpp  image_iterator.hpp  image_vector.hpp  improcessing.cpp  improcessing.hpp  lab1.cpp  lab1.hpp  lab2.cpp  light.hpp  main.cpp  material.hpp  matrix4x4.hpp  pixel_rgb.hpp  png_guard.hpp  point.hpp  renderer.hpp  scene_object.hpp
src/tests/: CMakeLists.txt  floyd_tests.cpp  image_tests.cpp  image_vector_tests.cpp  simple_tests.cpp
